--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - assets/images/av.jpeg
+  - assets/images/1.jpeg
+  - assets/images/2.jpeg
+  - assets/images/3.jpeg
+  - assets/music/aujla.mp3
+  - assets/music/kk.mp3
+  - assets/music/arijit.mp3
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
