--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   just_audio: ^0.9.36
   on_audio_query: ^2.9.0
   permission_handler: ^11.2.0
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
@@ -74,6 +75,7 @@ flutter:
   - assets/images/auj.jpg
   - assets/images/kk.jpg
   - assets/images/arjit.jpg
+  - assets/images/play1.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
